@@ -6,6 +6,7 @@ core:
 
 === Edge
 
+* Jim Gay
 * Brent Kroeker
 * Sean Cribbs
 
