@@ -2,6 +2,8 @@
 
 === Edge
 
+* Provide a config option for compressed cache with 
+'response_cache.compressed?' = true [Jim Gay]
 * Reverse view paths order in extension loader. [Sean Cribbs, Brent 
 Kroeker]
 * Remove obviated Ruby 1.8.7 compatibility patch. [Sean Cribbs]
